--- a/plot_PreVsPostAnalysis_DayNight.Rmd
+++ b/plot_PreVsPostAnalysis_DayNight.Rmd
@@ -42,15 +42,34 @@ tagprj <- readOGR(dsn = "Tag_065_UTMzone11n",
 tagproj <- proj4string(tagprj)
 
 all.data.frames <- readRDS(file = "RData/PreVsPost_DayNight.RDS")
-
+KD.eachID.pre.combined <- all.data.frames[[1]]
+KD.eachID.post.combined<- all.data.frames[[2]] 
+KD.eachID.pre.day <- all.data.frames[[3]]
+KD.eachID.pre.night <- all.data.frames[[4]]
+KD.eachID.post.day <- all.data.frames[[5]] 
+KD.eachID.post.night <- all.data.frames[[6]] 
+UD.post.95.latlon <- all.data.frames[[7]] 
+UD.post.50.latlon <- all.data.frames[[8]] 
+UD.pre.95.latlon <- all.data.frames[[9]] 
+UD.pre.50.latlon <- all.data.frames[[10]] 
+UD.pre.day.95.latlon <- all.data.frames[[11]] 
+UD.pre.day.50.latlon <- all.data.frames[[12]]
+UD.pre.night.95.latlon <- all.data.frames[[13]] 
+UD.pre.night.50.latlon <- all.data.frames[[14]] 
+UD.post.day.95.latlon <- all.data.frames[[15]]
+UD.post.day.50.latlon <- all.data.frames[[16]] 
+UD.post.night.95.latlon <- all.data.frames[[17]]
+UD.post.night.50.latlon <- all.data.frames[[18]]
+UD.pre.day.night.95.latlon <- all.data.frames[[19]]
+UD.pre.day.night.50.latlon <- all.data.frames[[20]]
+UD.post.day.night.95.latlon <- all.data.frames[[21]]
+UD.post.day.night.50.latlon <- all.data.frames[[22]]
 
 ```
 
 Load results from HR_analysis_GPS_LC_newtags_11July2018.Rmd. The following files contain raw data for pre period. First, look at each turtle for day and night combined. 
 
 ```{r, message=FALSE}
-
-KD.eachID.pre.combined <- all.data.frames$KD.eachID.pre.combined
 
 p.KDE.pre.combined <- ggplot() + 
   geom_polygon(data = KD.eachID.pre.combined$vert.95.df,
@@ -88,8 +107,6 @@ if (save.fig)
 Next, post period data are loaded and UDs for day and night combined are computed.
 ```{r, message=FALSE}
 
-KD.eachID.post.combined <- all.data.frames$KD.eachID.post.combined
-
 p.KDE.post.combined <- ggplot() + 
   geom_polygon(data = KD.eachID.post.combined$vert.95.df,
                aes(x = long, y = lat,
@@ -125,8 +142,6 @@ if (save.fig)
 
 We then pull out just day time for the pre period. One turtle cannot be analyzed because there were not enough relocation points in the day time. 
 ```{r}
-
-KD.eachID.pre.day <- all.data.frames$$KD.eachID.pre.day
 
 p.KDE.pre.day <- ggplot() + 
   geom_polygon(data = KD.eachID.pre.day$vert.95.df,
@@ -165,7 +180,6 @@ Do the same for the nighttime for the pre period and plot on top of the daytime 
 
 ```{r}
 
-KD.eachID.pre.night <- all.data.frames$KD.eachID.pre.night
 
 p.KDE.pre.day.night <- ggplot() + 
     geom_polygon(data = KD.eachID.pre.day$vert.95.df,
@@ -218,7 +232,6 @@ Post period and daytime.
 
 ```{r}
 
-KD.eachID.post.day <- all.data.frames$KD.eachID.post.day
 
 p.KDE.post.day <- ggplot() + 
   geom_polygon(data = KD.eachID.post.day$vert.95.df,
@@ -258,7 +271,6 @@ Post period night time overlayed on top of daytime.
 
 ```{r}
 
-KD.eachID.post.night <- all.data.frames$KD.eachID.post.night
 
 p.KDE.post.day.night <- ggplot() + 
      geom_polygon(data = KD.eachID.post.day$vert.95.df,
@@ -323,9 +335,6 @@ Combine all turtles together - day and night.
 
 
 ```{r}
-UD.pre.95.latlon <- all.data.frames$UD.pre.95.latlon
-UD.pre.50.latlon <- all.data.frames$UD.pre.50.latlon
-
 p.KDE.pre.all <- ggplot() + 
   geom_polygon(data = UD.pre.95.latlon,
                aes(x = long, y = lat,
@@ -361,8 +370,6 @@ plot(p.KDE.pre.all)
 
 
 ```{r}
-UD.post.95.latlon <- all.data.frames$UD.post.95.latlon
-UD.post.50.latlon <- all.data.frames$UD.post.50.latlon
 
 p.KDE.pre.post.all <- ggplot() + 
   geom_polygon(data = UD.pre.95.latlon,
@@ -414,8 +421,6 @@ Then split these into day and night.
 
 Plot pre night vs day
 ```{r}
-UD.pre.day.night.95.latlon <- all.data.frames$UD.pre.day.night.95.latlon
-UD.pre.day.night.50.latlon <- all.data.frames$UD.pre.day.night.50.latlon
 
 p.KDE.pre.DayVsNight <- ggplot() + 
   geom_polygon(data = UD.pre.day.night.95.latlon,
@@ -455,8 +460,6 @@ plot(p.KDE.pre.DayVsNight)
 Plot post night vs day
 ```{r}
 
-UD.post.day.night.95.latlon <- all.data.frames$UD.post.day.night.95.latlon
-UD.post.day.night.50.latlon <- all.data.frames$UD.post.day.night.50.latlon
 
 p.KDE.post.DayVsNight <- ggplot() + 
   geom_polygon(data = UD.post.day.night.95.latlon,
@@ -493,26 +496,26 @@ plot(p.KDE.post.DayVsNight)
 
 ```{r}
 p.KDE.pre.post.DayVsNight <- ggplot() + 
-  geom_polygon(data = UD.pre.95.latlon,
+  geom_polygon(data = UD.pre.day.night.95.latlon,
                aes(x = long, y = lat,
                    group = group),
                color = "black",
                fill = "lightgoldenrod1",
                alpha = 1.0) +
-  geom_polygon(data = UD.pre.50.latlon,
+  geom_polygon(data = UD.pre.day.night.50.latlon,
                aes(x = long, y = lat,
                    group = group),
                color = "black",
                fill = "gold",
                alpha = 1.0) +
   
-  geom_polygon(data = UD.post.95.latlon,
+  geom_polygon(data = UD.post.day.night.95.latlon,
                aes(x = long, y = lat,
                    group = group),
                color = "black",
                fill = "lightgreen",
                alpha = 0.4) +
-  geom_polygon(data = UD.post.50.latlon,
+  geom_polygon(data = UD.post.day.night.50.latlon,
                aes(x = long, y = lat,
                    group = group),
                color = "black",
@@ -538,17 +541,5 @@ if (save.fig)
 plot(p.KDE.pre.post.DayVsNight)
 ```
 
-Results are saved in .RData file (Out_PreVsPostAnalysis_DayNight.RData)
 
-```{r}
-#These are the only things needed for making plots
-save.list <- list(KD.eachID.pre.combined, KD.eachID.post.combined, KD.eachID.pre.day, 
-                  KD.eachID.pre.night, KD.eachID.post.day, KD.eachID.post.night, 
-                  UD.post.95.latlon, UD.post.50.latlon, UD.pre.95.latlon, 
-                  UD.pre.50.latlon, UD.pre.day.95.latlon, UD.pre.day.50.latlon,
-                  UD.pre.night.95.latlon, UD.pre.night.50.latlon, UD.post.day.95.latlon,
-                  UD.post.day.50.latlon, UD.post.night.95.latlon, UD.post.night.50.latlon)
-
-
-```
 
